# rnnoise-0.2-cmake

./: CMakeLists.txt  LICENSE  README.md  config.h  main.c
data/: addednoise.pcm  out.pcm
src/: nnet.h
